WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107751
Stop the background-parser during HTMLDocumentParser::detatch to prevent crashes/asserts
https://bugs.webkit.org/show_bug.cgi?id=107751
Summary
Stop the background-parser during HTMLDocumentParser::detatch to prevent cras...
Eric Seidel (no email)
Reported
2013-01-23 15:28:56 PST
Stop the background-parser during HTMLDocumentParser::detatch to prevent crashes/asserts
Attachments
Patch
(1.45 KB, patch)
2013-01-23 15:30 PST
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2013-01-23 15:30:00 PST
Created
attachment 184329
[details]
Patch
WebKit Review Bot
Comment 2
2013-01-23 16:22:48 PST
Comment on
attachment 184329
[details]
Patch Clearing flags on attachment: 184329 Committed
r140609
: <
http://trac.webkit.org/changeset/140609
>
WebKit Review Bot
Comment 3
2013-01-23 16:22:51 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug