Stop the background-parser during HTMLDocumentParser::detatch to prevent crashes/asserts https://bugs.webkit.org/show_bug.cgi?id=107751

Reviewed by Tony Gentilcore.

This appears to fix the 2 intermitent crashers we were seeing while
running fast/parser.  And definitely fixes 8 ASSERTs seen using a Debug build.

* html/parser/HTMLDocumentParser.cpp:
(WebCore::HTMLDocumentParser::detach):


Canonical link: https://commits.webkit.org/125943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140609 268f45cc-cd09-0410-ab3c-d52691b4dbfc